Update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 /node_modules
 .DS_Store
 .vs
-*/bin
-*/obj
+# Ignore build output folders across all projects
+**/bin/
+**/obj/
+
+# Optional: also ignore common intermediate build directories
+**/out/
+**/Debug/
+**/Release/
+
+# If using
